aws/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-hello  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1-hello  
  template:
    metadata:
      labels:
        app: app1-hello  
    spec:
      containers:
        - name: app1-hello  
          image: embrakx/hello-spring:latest
          

          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app1-hello  
spec:
  selector:
    app: app1-hello  
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32000
