aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tax-app-ingress
  annotations:
    # Enable regex support
    nginx.ingress.kubernetes.io/use-regex: "true"

    # Rewrite path using capture group
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:

          # Backend
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80

          # Frontend
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
